syntax = "proto2";

package com.tisza.tarock;
option java_package = "com.tisza.tarock.proto";

message Card
{
	oneof card_type
	{
		SuitCard suit_card = 1;
		TarockCard tarock_card = 1;
	}
}

message SuitCard
{
	required int32 suit = 1;
	required int32 value = 2;
}

message TarockCard
{
	required int32 value = 1;
}

message Announcement
{
	required string id = 1;
	required int32 contra_level = 2;
	optional int32 suit = 3;
	optional Card card = 4;
	optional int32 round = 5;
}

enum Phase
{
	BIDDING = 0;
	CHANGING = 1;
	CALLING = 2;
	ANNOUNCING = 3;
	GAMEPLAY = 4;
	FINISHED = 5;
	END = 6;
	INTERRUPTED = 7;
}
